# Phantomnet-Ecosystem

./: .gitignore  Cargo.toml  README.md  autopatch_workspace.sh  fix_and_patch_deps.sh  fix_bridge_and_dag.sh  fix_cargo_dependencies.sh  fix_cargo_toml.sh  fix_duplicate_package_headers.sh  fix_local_dependencies.sh  fix_phantomnet_bridge.sh  fix_workspace_root.sh  fix_zk_and_dag.sh  full_cargo_toml_repair.sh  package-lock.json  package.json  publish_to_github.sh  repair_all_cargo.sh  repair_cargo_toml.sh  {}.tmp
.github/workflows/: ci.yml
backup_tomls/: Cargo.toml
backup_tomls/src/: main.rs
charts/phantomnet/: Chart.yaml  values.yaml
dashboard/: README.md
dashboard/public/: index.html
dashboard/src/: App.tsx
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  prometheus.yml
docs/: changelog.md  index.html  quickstart.md  security.md
edr/: Cargo.toml
edr/src/: main.rs
kubernetes-operator/: README.md  package.json
kubernetes-operator/src/: main.ts
phantomnet-bridge/: Cargo.toml
phantomnet-bridge/src/: lib.rs  main.rs
phantomnet-node/: Cargo.toml
phantomnet-node/src/: main.rs
phantomnet-zk/: Cargo.toml  lib.rs
phantomnet-zk/src/: lib.rs  main.rs  zklogin.rs  zkvote.rs
phantomnetctl/: Cargo.toml  Cargo.toml.bak
phantomnetctl/src/: main.rs
phantomnetd/: Cargo.toml  Cargo.toml.bak  phantomnetd.service
phantomnetd/src/: main.rs  metrics.rs  votes.rs  zkvote.rs  (+3 more)
rollup-dag/: Cargo.toml
scripts/: deploy_all.sh  deploy_dashboard_pages.sh  publish_v110_dev.sh
solidity-analyzer/: Cargo.toml
webui/: package-lock.json  package.json
(+22 files in other folders)
